--- a/2020_1.md
+++ b/2020_1.md
@@ -1,4 +1,11 @@
-# Machine Learning
+# Menu 
+
+* [Referências Bibliográficas](https://github.com/ect-info/dpia/blob/master/Bibliografia.md) 
+* [Referências de Cursos Online](https://github.com/ect-info/ml/blob/master/cursos_online.md) 
+* [Outras Referências](https://github.com/ect-info/ml/blob/master/outras_referencias.md) 
+ 
+
+# _Machine Learning_ 
 Conteúdo de apoio sobre Machine Learning da disciplina IMD0188  
 
 ## Canal de Comunicação 
@@ -13,57 +20,16 @@ Estes formulários registram a participação nas aulas assínscronas.
 * [Slides](https://docs.google.com/presentation/d/1iELBYui_t5S_FNhsOZkqm_a1xvHtOW17QbGeLYWAr-s/edit?usp=sharing) 
 * [Códigos](https://colab.research.google.com/drive/1cnvCdgxz0eHWzSSjKrMPD1LLj5VE21rv?usp=sharing)  
 
-## Começando com Python 
-* Material produzido pelo grupo de estudos em Ciência de Dados, https://github.com/Natalnet/GCiD/tree/master/Codes/Basic%20Module 
 
-## Links Interessantes 
-* Curso de Introdução a Deep Learning com PyTorch, https://classroom.udacity.com/courses/ud188 
-* Interagindo e visualizando uma linha de regressão linear, https://s3.amazonaws.com/codecademy-content/programs/data-science-path/line-fitter/line-fitter.html
-* Excelentes tutoriais sobre aprendizado de máquina, https://matheusfacure.github.io/tutoriais/ 
-* Tutorias de python e machine learning, https://github.com/cs-ufrn 
-* MLP para fins didáticos em C++, https://github.com/orivaldosantana/mlp 
-* colah's blog, http://colah.github.io/ 
-* Deep Learning Book, http://www.deeplearningbook.org/ 
-* Página web com lições sobre TensorFlow, https://learningtensorflow.com/ 
-* Github sobre K Means Clustering de Siraj Raval, https://github.com/llSourcell/k_means_clustering/blob/master/kmeans.py.ipynb 
-* Brilliant, https://brilliant.org/courses/machine-learning/?tour=true 
-* Geeks for Geeks, https://www.geeksforgeeks.org/genetic-algorithms/
-* Deep Natural Language Processing course offered in Hilary Term 2017 at the University of Oxford, https://github.com/oxford-cs-deepnlp-2017/lectures
-* Introdução a CNN, https://mlnotebook.github.io/post/CNN1/
 
-## Referências 
 
-* Livro Neural Networks and Deep Learning, http://neuralnetworksanddeeplearning.com/ 
-* Livro Hands-On Machine Learning,  https://github.com/ageron/handson-ml 
-* Livro Dive into Deep Learning, http://d2l.ai/index.html
-* Livro Deep Learning, https://www.deeplearningbook.org/
-* Super Data Science, https://www.superdatascience.com/machine-learning/ 
-* Scikit-learn, http://scikit-learn.org/ 
-* Super Data Science - Convolutional Neural Networks,  https://www.superdatascience.com/blogs/the-ultimate-guide-to-convolutional-neural-networks-cnn
-* A Tutorial on Support Vector Machines for Pattern Recognition, https://www.di.ens.fr/~mallat/papiers/svmtutorial.pdf
 
-## Links de Dados 
-* Dados abertos UFRN, http://dados.ufrn.br/organization/ufrn
-* Kaggle data sets, https://www.kaggle.com/datasets
-
-## Cursos Onlines 
-
-* Introdução a _Machine Learning_, Udacity, https://classroom.udacity.com/courses/ud120
-* Introdução a Deep Learning com PyTorch, https://classroom.udacity.com/courses/ud188 
-* Machine Learning - Udemy, https://www.udemy.com/machinelearning
-* Deep Learning - Udemy, https://www.udemy.com/deep-learning-com-python-az-curso-completo 
-* Machine Learning - Google, https://developers.google.com/machine-learning/crash-course/
-* Machine Learning - Coursera, https://www.coursera.org/learn/machine-learning
-* Elements of AI, https://course.elementsofai.com/ 
-* The Complete Self-Driving Car Course - Applied Deep Learning - Udemy, https://www.udemy.com/applied-deep-learningtm-the-complete-self-driving-car-course 
-* Introduction to Python, https://www.datacamp.com/courses/intro-to-python-for-data-science
-
-## Exercícios
+## Exemplos 
 
 * Implementação do perceptron, https://github.com/ect-info/ml/tree/master/guias/Perceptron 
 
 
-## Bibliografia 
+## Bibliografia Básica 
 
 * GÉRON; **Hands-On Machine Learning with Scikit-Learn and TensorFlow: Concepts, Tools, and Techniques to Build Intelligent Systems**. O’REILLY, 2017.
 * MITCHELL; **Machine Learning**, Publisher: McGraw-Hill Science/Engineering/Math, 1997.
