--- a/2020_1.md
+++ b/2020_1.md
@@ -14,23 +14,26 @@ Conteúdo de apoio sobre Machine Learning da disciplina IMD0188
 ## Material de Aula 
 Estes formulários registram a participação nas aulas assínscronas. 
 
-### Breve introdução sobre Regressão Linear  
+### Introdução ao Aprendizado de Máquina 
+* [Vídeos e Form: Introdução ao Aprendizado de Máquina](https://forms.gle/XQFTKRAzzp5QbCs68)   
+* [Vídeos e Form: Aprendizado de Máquina - Exemplos](https://forms.gle/17xb4qcNzrcRA3gN9)   
+* [Vídeos e Form: Introdução ML - Principais Conceitos](https://forms.gle/A8fpDgvEv7A8YPFv7)   
+* [Slides: Conceitos](https://docs.google.com/presentation/d/1UKK1HW9Wfh-q2qqAloiJYp179EVMw5GuVu3Yzphefgw/edit?usp=sharing)   
 
+### Breve introdução sobre Regressão Linear  
 * [Vídeos e Form](https://forms.gle/QWaVAi71GBTnjNYK8) 
 * [Slides](https://docs.google.com/presentation/d/1iELBYui_t5S_FNhsOZkqm_a1xvHtOW17QbGeLYWAr-s/edit?usp=sharing) 
 * [Códigos](https://colab.research.google.com/drive/1cnvCdgxz0eHWzSSjKrMPD1LLj5VE21rv?usp=sharing)  
-
-
+* [Exercício](https://colab.research.google.com/drive/1Ije_CQ1uywwhaQU9bnDEiSmS0b9AJq1E?usp=sharing) 
+* [Desafio](https://colab.research.google.com/drive/1cY0xY7G8hh6OLBndI7_M5i48ZBqdSBA7?usp=sharing)
 
 
 
 ## Exemplos 
-
 * Implementação do perceptron, https://github.com/ect-info/ml/tree/master/guias/Perceptron 
 
 
 ## Bibliografia Básica 
-
 * GÉRON; **Hands-On Machine Learning with Scikit-Learn and TensorFlow: Concepts, Tools, and Techniques to Build Intelligent Systems**. O’REILLY, 2017.
 * MITCHELL; **Machine Learning**, Publisher: McGraw-Hill Science/Engineering/Math, 1997.
 * NEGNEVITSKY; **Artificial Intelligence: A Guide to Intelligent Systems**, Second Edition, Publisher Addison Wesley.
