--- a/2020_1.md
+++ b/2020_1.md
@@ -27,6 +27,11 @@ Estes formulários registram a participação nas aulas assínscronas.
 * [Exercício](https://colab.research.google.com/drive/1Ije_CQ1uywwhaQU9bnDEiSmS0b9AJq1E?usp=sharing) 
 * [Desafio](https://colab.research.google.com/drive/1cY0xY7G8hh6OLBndI7_M5i48ZBqdSBA7?usp=sharing)
 
+### Breve introdução sobre Multilayer Perceptron 
+* [Vídeos e Form: MLP Parte 1](https://forms.gle/VopVYaFesompVMgn8)
+* [Vídeos e Form: MLP Parte 2](https://forms.gle/YbRqcxQT5nDbjYzj9) 
+* [Exemplo de código: Perceptron](https://colab.research.google.com/drive/1jbFCvifaAou19mlu2pI3Rso8DoMow_zl?usp=sharing) 
+* [Slides](https://docs.google.com/presentation/d/1oIzH-SNbJ3_4vYZdt_IZQi3537BUJKsvio_oV8c8Bnc/edit?usp=sharing) 
 
 
 ## Exemplos 
