--- a/2020_1.md
+++ b/2020_1.md
@@ -34,7 +34,7 @@ Estes formulários registram a participação nas aulas assínscronas.
 * [Slides](https://docs.google.com/presentation/d/1oIzH-SNbJ3_4vYZdt_IZQi3537BUJKsvio_oV8c8Bnc/edit?usp=sharing) 
 
 ### Suport Vector Machine (SVM) - Introdução
-* [Vídeo e Form: SVM](https://forms.gle/vzFZXatdThDe9LdH8) 
+* [Vídeos e Form: SVM](https://forms.gle/vzFZXatdThDe9LdH8) 
 * [Exemplo de código: SVM Linear](https://colab.research.google.com/drive/1VYmZBcf2FHmz_gwPRxllxwoy0nTaU8X9?usp=sharing) 
 * [Slides](https://docs.google.com/presentation/d/19mAI5sjOWURpzuKpoFjbjmCkjUXUysU_kysfbksmVAg/edit?usp=sharing) 
 
