--- a/2020_1.md
+++ b/2020_1.md
@@ -2,9 +2,9 @@
 
 * [Referências Bibliográficas](https://github.com/ect-info/dpia/blob/master/Bibliografia.md) 
 * [Referências de Cursos Online](https://github.com/ect-info/ml/blob/master/cursos_online.md) 
-* [Outras Referências](https://github.com/ect-info/ml/blob/master/outras_referencias.md) 
+* [Outras Referências](https://github.com/ect-info/ml/blob/master/outras_referencias.md)
+* [Material de Aula](https://github.com/ect-info/ml/blob/master/2020_1.md#material-de-aula) 
  
-
 # _Machine Learning_ 
 Conteúdo de apoio sobre Machine Learning da disciplina IMD0188  
 
