--- a/2020_1.md
+++ b/2020_1.md
@@ -46,6 +46,16 @@ Estes formulários registram a participação nas aulas assínscronas.
 * [Exemplo de código: MLP - Exemplo sobre se um cliente deixa um banco](https://colab.research.google.com/drive/1NndIE2zvup_aWqSG06JR7i6_WxXQ-xMU?usp=sharing)
 * [Exemplo de código: Reconhecimento de caracteres escritos a mão](https://colab.research.google.com/drive/1gGi-n3vAJkjdEKMYLZkSCXoDhyRS1tSJ?usp=sharing)
 
+### Introdução sobre K-Means
+* [Vídeos e Form: K-Means](https://forms.gle/XrCfUvuvtXtwAua56)
+* [Slides](https://docs.google.com/presentation/d/1hzeAFwgHNZ7pr_POzd4_2lXUgOz_vrVfuhjxl6tbBCs/edit?usp=sharing)
+* [Exemplo de código: perfil de clientes de uma loja](https://colab.research.google.com/drive/15Q-gTih7v2f5pYc64xQa2ytzX2gisX0q?usp=sharing)
+
+### Introdução sobre Rede SOM 
+* [Vídeos e Form: Rede SOM](https://forms.gle/uYQti6kABLtL2g659)
+* [Slides]()
+* [Exemplo de código: visualizar os perfis de alunos da Escola de Ciência e Tecnologia da UFRN](https://colab.research.google.com/drive/1PX9YlNGx_pjgesMsnhyjrXI-nsuJOdWI?usp=sharing)
+
 
 ## Exemplos 
 * Implementação do perceptron, https://github.com/ect-info/ml/tree/master/guias/Perceptron 
