--- a/2020_1.md
+++ b/2020_1.md
@@ -53,7 +53,7 @@ Estes formulários registram a participação nas aulas assínscronas.
 
 ### Introdução sobre Rede SOM 
 * [Vídeos e Form: Rede SOM](https://forms.gle/uYQti6kABLtL2g659)
-* [Slides]()
+* [Slides](https://docs.google.com/presentation/d/1vGS--E6VbtohvVkUo23GM-0MsL-EMTnxAXKcSHiomLI/edit?usp=sharing)
 * [Exemplo de código: visualizar os perfis de alunos da Escola de Ciência e Tecnologia da UFRN](https://colab.research.google.com/drive/1PX9YlNGx_pjgesMsnhyjrXI-nsuJOdWI?usp=sharing)
 
 
