--- a/2020_1.md
+++ b/2020_1.md
@@ -56,6 +56,10 @@ Estes formulários registram a participação nas aulas assínscronas.
 * [Slides](https://docs.google.com/presentation/d/1vGS--E6VbtohvVkUo23GM-0MsL-EMTnxAXKcSHiomLI/edit?usp=sharing)
 * [Exemplo de código: visualizar os perfis de alunos da Escola de Ciência e Tecnologia da UFRN](https://colab.research.google.com/drive/1PX9YlNGx_pjgesMsnhyjrXI-nsuJOdWI?usp=sharing)
 
+### Introdução sobre Rede Neural Convolucional 
+* [Form e vídeos](https://forms.gle/YCYBFEwggpJtugy48) 
+* [Código: reconhecimento de números escritos à mão](https://colab.research.google.com/drive/1gd9aB82vSHAEb_nHV0wJJZU4-gSfPbHN?usp=sharing) 
+* [Slides](https://docs.google.com/presentation/d/1KTPsi2Y4U63cuNUoCh32sd3VJfyYf6MA7NT3fHucboM/edit?usp=drivesdk)
 
 ## Exemplos 
 * Implementação do perceptron, https://github.com/ect-info/ml/tree/master/guias/Perceptron 
