--- a/2020_1.md
+++ b/2020_1.md
@@ -8,6 +8,7 @@ Conteúdo de apoio sobre Machine Learning da disciplina IMD0188
 * [Referências de Cursos Online](https://github.com/ect-info/ml/blob/master/cursos_online.md) 
 * [Outras Referências](https://github.com/ect-info/ml/blob/master/outras_referencias.md)
 * [Material de Aula](https://github.com/ect-info/ml/blob/master/2020_1.md#material-de-aula) 
+* [Atividades]()
  
 
 ## Canal de Comunicação 
@@ -60,6 +61,13 @@ Estes formulários registram a participação nas aulas assínscronas.
 * [Form e vídeos](https://forms.gle/YCYBFEwggpJtugy48) 
 * [Código: reconhecimento de números escritos à mão](https://colab.research.google.com/drive/1gd9aB82vSHAEb_nHV0wJJZU4-gSfPbHN?usp=sharing) 
 * [Slides](https://docs.google.com/presentation/d/1KTPsi2Y4U63cuNUoCh32sd3VJfyYf6MA7NT3fHucboM/edit?usp=drivesdk)
+
+### Atividades 
+
+#### Uso de regeressão 
+* Monte sua equipe
+* Faça uma cópia do exemplo: "Base de dados de aluguel" ([clique aqui para acessar](https://colab.research.google.com/drive/1N2tsSSG18GhNsSxHKfE61WAGzZaf9Mww?usp=sharing)) 
+* Complete o código de exemplo seguindo as instruções  
 
 ## Exemplos 
 * Implementação do perceptron, https://github.com/ect-info/ml/tree/master/guias/Perceptron 
