--- a/2020_1.md
+++ b/2020_1.md
@@ -8,7 +8,7 @@ Conteúdo de apoio sobre Machine Learning da disciplina IMD0188
 * [Referências de Cursos Online](https://github.com/ect-info/ml/blob/master/cursos_online.md) 
 * [Outras Referências](https://github.com/ect-info/ml/blob/master/outras_referencias.md)
 * [Material de Aula](https://github.com/ect-info/ml/blob/master/2020_1.md#material-de-aula) 
-* [Atividades]()
+* [Atividades](https://github.com/ect-info/ml/blob/master/2020_1.md#atividades)
  
 
 ## Canal de Comunicação 
