--- a/2020_2.md
+++ b/2020_2.md
@@ -7,58 +7,62 @@ Conteúdo de apoio sobre Machine Learning da disciplina Tópicos Avançandos em 
 * [Referências Bibliográficas](https://github.com/ect-info/dpia/blob/master/Bibliografia.md) 
 * [Referências de Cursos Online](https://github.com/ect-info/ml/blob/master/cursos_online.md) 
 * [Outras Referências](https://github.com/ect-info/ml/blob/master/outras_referencias.md)
-* [Material de Aula](https://github.com/ect-info/ml/blob/master/2020_1.md#material-de-aula) 
-* [Atividades](https://github.com/ect-info/ml/blob/master/2020_1.md#atividades)
+* [Material de Aula](https://github.com/ect-info/ml/blob/master/2020_2.md#material-de-aula) 
+* [Atividades](https://github.com/ect-info/ml/blob/master/2020_2.md#atividades)
  
 
 ## Canal de Comunicação 
 * Para compartilhamento de conhecimento entre os estudantes:  https://discord.gg/mp8aPyh
 
+## Compreendendo o Perfil da Turma 
+* O objetivo deste formulário é conhecer o perfil da turma ECT2702 - Tópicos I - T01 (2020.2)  - para poder ajustar melhor as metodologias de ensino / aprendizagem. 
+* Gostaria que todos os alunos preenchessem o formulário: https://forms.gle/KLb1homacdQuW7EB7 
+
 ## Material de Aula 
 Estes formulários registram a participação nas aulas assínscronas. 
 
 ### Introdução ao Aprendizado de Máquina 
-* [Vídeos e Form: Introdução ao Aprendizado de Máquina](https://forms.gle/KLb1homacdQuW7EB7)   
-* [Vídeos e Form: Aprendizado de Máquina - Exemplos]()   
-* [Vídeos e Form: Introdução ML - Principais Conceitos]()   
+* [Vídeos e Form: Introdução ao Aprendizado de Máquina](https://docs.google.com/forms/d/e/1FAIpQLSfPazkdXRr3WQI00g6gzig64_bDbR-Jh9T9_nSLwfdEeYVpHA/viewform?usp=sf_link) 
+* [Vídeos e Form: Aprendizado de Máquina - Exemplos](https://forms.gle/Qbg8eC9uWUaRWnmb9)   
+* [Vídeos e Form: Introdução ML - Principais Conceitos](https://docs.google.com/forms/d/e/1FAIpQLSe0lODS07EpiFua5VSONKFupuaYw8hmNnlEc3qnZvlQuJ5pyw/viewform?usp=sf_link) 
 * [Slides: Conceitos](https://docs.google.com/presentation/d/1UKK1HW9Wfh-q2qqAloiJYp179EVMw5GuVu3Yzphefgw/edit?usp=sharing)   
 
 ### Breve introdução sobre Regressão Linear  
-* [Vídeos e Form]() 
+* [Vídeos e Form](https://docs.google.com/forms/d/e/1FAIpQLSfh3uxvNLzaKatVBdn529wOkrLWhUmzA97lwBAGA_1ggJMT6g/viewform?usp=sf_link) 
 * [Slides](https://docs.google.com/presentation/d/1iELBYui_t5S_FNhsOZkqm_a1xvHtOW17QbGeLYWAr-s/edit?usp=sharing) 
 * [Código utilizado no vídeo](https://colab.research.google.com/drive/1cnvCdgxz0eHWzSSjKrMPD1LLj5VE21rv?usp=sharing)  
 * [Exercício](https://colab.research.google.com/drive/1Ije_CQ1uywwhaQU9bnDEiSmS0b9AJq1E?usp=sharing) 
 * [Desafio](https://colab.research.google.com/drive/1cY0xY7G8hh6OLBndI7_M5i48ZBqdSBA7?usp=sharing)
 
 ### Breve introdução sobre Multilayer Perceptron 
-* [Vídeos e Form: MLP Parte 1]()
-* [Vídeos e Form: MLP Parte 2]() 
+* [Vídeos e Form: MLP Parte 1](https://docs.google.com/forms/d/e/1FAIpQLSdTYkkkG5m4YgZxFOUJdT-Qs5jF9l-bYtxgK9cdaKKuRFDNyg/viewform?usp=sf_link)
+* [Vídeos e Form: MLP Parte 2](https://docs.google.com/forms/d/e/1FAIpQLSfpQKRql-glvQdagyxVhsNIBUVOBkskpLNgZVZTOr6Dn-C6Ag/viewform?usp=sf_link) 
 * [Exemplo de código: Perceptron](https://colab.research.google.com/drive/1jbFCvifaAou19mlu2pI3Rso8DoMow_zl?usp=sharing) 
 * [Slides](https://docs.google.com/presentation/d/1oIzH-SNbJ3_4vYZdt_IZQi3537BUJKsvio_oV8c8Bnc/edit?usp=sharing) 
 
 ### Introdução sobre Suport Vector Machine (SVM)
-* [Vídeos e Form: SVM]() 
+* [Vídeos e Form: SVM](https://docs.google.com/forms/d/e/1FAIpQLSeoDr4aCyHvuZlxxZJFa1c65n8f9eo_11DqSFY-YFkHEc-iNA/viewform?usp=sf_link) 
 * [Exemplo de código: SVM Linear](https://colab.research.google.com/drive/1VYmZBcf2FHmz_gwPRxllxwoy0nTaU8X9?usp=sharing) 
 * [Slides](https://docs.google.com/presentation/d/19mAI5sjOWURpzuKpoFjbjmCkjUXUysU_kysfbksmVAg/edit?usp=sharing) 
 
 ### Introdução sobre _Deep Learning_
-* [Vídeos e Form: _Deep Learning_]()
+* [Vídeos e Form: _Deep Learning_](https://docs.google.com/forms/d/e/1FAIpQLSefGHcBnH4_wjdSuX2BxqJ85tKRTMr5pVHcHtLZvJ5XBCwBXw/viewform?usp=sf_link)
 * [Slides: _Deep Learning_](https://docs.google.com/presentation/d/1pxztvhuOc36D76cDW86oj8nGZAIlQSEn2GZJE0GzGLw/edit?usp=sharing)
 * [Exemplo de código: MLP - Exemplo sobre se um cliente deixa um banco](https://colab.research.google.com/drive/1NndIE2zvup_aWqSG06JR7i6_WxXQ-xMU?usp=sharing)
 * [Exemplo de código: Reconhecimento de caracteres escritos a mão](https://colab.research.google.com/drive/1gGi-n3vAJkjdEKMYLZkSCXoDhyRS1tSJ?usp=sharing)
 
 ### Introdução sobre K-Means
-* [Vídeos e Form: K-Means]()
+* [Vídeos e Form: K-Means](https://docs.google.com/forms/d/e/1FAIpQLScNKNALY3P645shEayJzPqO4N9P5-8Q6DsKcp30QO4UTevF-Q/viewform?usp=sf_link)
 * [Slides](https://docs.google.com/presentation/d/1hzeAFwgHNZ7pr_POzd4_2lXUgOz_vrVfuhjxl6tbBCs/edit?usp=sharing)
 * [Exemplo de código: perfil de clientes de uma loja](https://colab.research.google.com/drive/15Q-gTih7v2f5pYc64xQa2ytzX2gisX0q?usp=sharing)
 
 ### Introdução sobre Rede SOM 
-* [Vídeos e Form: Rede SOM]()
+* [Vídeos e Form: Rede SOM](https://docs.google.com/forms/d/e/1FAIpQLSemMYcbVnQgDOYMIEB9M_uaK2RSLciTqzgdIZtwAn2vB_KQsA/viewform?usp=sf_link)
 * [Slides](https://docs.google.com/presentation/d/1vGS--E6VbtohvVkUo23GM-0MsL-EMTnxAXKcSHiomLI/edit?usp=sharing)
 * [Exemplo de código: visualizar os perfis de alunos da Escola de Ciência e Tecnologia da UFRN](https://colab.research.google.com/drive/1PX9YlNGx_pjgesMsnhyjrXI-nsuJOdWI?usp=sharing)
 
 ### Introdução sobre Rede Neural Convolucional 
-* [Vídeos e Form]() 
+* [Vídeos e Form](https://docs.google.com/forms/d/e/1FAIpQLSev6WOXJcQj9cIDlHYPIfsbPvpkDVsl2rqI4g7J6flD-03LOg/viewform?usp=sf_link) 
 * [Código: reconhecimento de números escritos à mão](https://colab.research.google.com/drive/1gd9aB82vSHAEb_nHV0wJJZU4-gSfPbHN?usp=sharing) 
 * [Slides](https://docs.google.com/presentation/d/1KTPsi2Y4U63cuNUoCh32sd3VJfyYf6MA7NT3fHucboM/edit?usp=drivesdk)
 
