--- a/2020_2.md
+++ b/2020_2.md
@@ -66,7 +66,15 @@ Estes formulários registram a participação nas aulas assínscronas.
 * [Código: reconhecimento de números escritos à mão](https://colab.research.google.com/drive/1gd9aB82vSHAEb_nHV0wJJZU4-gSfPbHN?usp=sharing) 
 * [Slides](https://docs.google.com/presentation/d/1KTPsi2Y4U63cuNUoCh32sd3VJfyYf6MA7NT3fHucboM/edit?usp=drivesdk)
 
-### Atividades 
+
+### Introdução sobre Processamento de Linguagem Natural (NLP) 
+* [Slides: NLP ](https://docs.google.com/forms/d/e/1FAIpQLScSCcux1V-fKBrYJAC_p_tqMSSSIIzvqPOU2Po59p6XiMnSmg/viewform?usp=sf_link)
+* [Form e vídeos](https://forms.gle/UAbKYR8AesufY6q38)
+* [Código: Análise de sentimentos ](https://colab.research.google.com/drive/1n80Us6FJZ74XyYIyl8iiqbSyIBapk9Yj?usp=sharing)
+
+
+
+### Atividades Extras
 
 #### Uso de regeressão 
 * Monte sua equipe
