--- a/2020_2.md
+++ b/2020_2.md
@@ -74,9 +74,13 @@ Estes formulários registram a participação nas aulas assínscronas.
 
 
 
-### Atividades Extras
+### Atividades 
 
-#### Uso de regeressão 
+#### Avaliativas 
+
+#### Extras
+
+##### Uso de regeressão 
 * Monte sua equipe
 * Faça uma cópia do exemplo: "Base de dados de aluguel" ([clique aqui para acessar](https://colab.research.google.com/drive/1N2tsSSG18GhNsSxHKfE61WAGzZaf9Mww?usp=sharing)) 
 * Complete o código de exemplo seguindo as instruções  
