--- a/2020_2.md
+++ b/2020_2.md
@@ -9,6 +9,7 @@ Conteúdo de apoio sobre Machine Learning da disciplina Tópicos Avançandos em 
 * [Outras Referências](https://github.com/ect-info/ml/blob/master/outras_referencias.md)
 * [Material de Aula](https://github.com/ect-info/ml/blob/master/2020_2.md#material-de-aula) 
 * [Atividades](https://github.com/ect-info/ml/blob/master/2020_2.md#atividades)
+* [Cronograma](https://github.com/ect-info/ml/blob/master/cronograma_2020_2.md)
  
 
 ## Canal de Comunicação 
