--- a/2020_2.md
+++ b/2020_2.md
@@ -20,7 +20,20 @@ Conteúdo de apoio sobre Machine Learning da disciplina Tópicos Avançandos em 
 * Gostaria que todos os alunos preenchessem o formulário: https://forms.gle/KLb1homacdQuW7EB7 
 
 ## Material de Aula 
-Estes formulários registram a participação nas aulas assínscronas. 
+Observação: O preenchimento dos formulários registra a participação nas aulas assínscronas. 
+
+### Apresentação e Planejamento
+* [Slides](https://docs.google.com/presentation/d/1EcVzbWg8w4Nt77M8Lqb5SEOAq0EJ3cDwft-UY8qKcvk/edit?usp=sharing)
+* Vídeos - Trechos da aula do dia 19/01/2021 
+  * [Apresentação, objetivos, horários e presença](https://youtu.be/AxWjQflbOLE)
+  * [Metodologia](https://youtu.be/kN2P7LoxVKs)
+  * [Avaliações](https://youtu.be/he14LmG1Gvw)
+  * [Ferramentas de apoio](https://youtu.be/mTJ0Uwww0-g)
+  
+  
+
+
+
 
 ### Introdução ao Aprendizado de Máquina 
 * [Vídeos e Form: Introdução ao Aprendizado de Máquina](https://docs.google.com/forms/d/e/1FAIpQLSfPazkdXRr3WQI00g6gzig64_bDbR-Jh9T9_nSLwfdEeYVpHA/viewform?usp=sf_link) 
@@ -74,10 +87,16 @@ Estes formulários registram a participação nas aulas assínscronas.
 * [Código: Análise de sentimentos ](https://colab.research.google.com/drive/1n80Us6FJZ74XyYIyl8iiqbSyIBapk9Yj?usp=sharing)
 
 
-
 ### Atividades 
+#### Avaliativas (Previsão)
+1. Prever o lucro de uma startup
+1. Previsão de compra de um produto
+1. Reconhecimento de dígitos escritos a mão
+1. Perfil de clientes de uma loja 
+1. Análise de perfil de estudantes
+1. Reconhecimento de faces
+1. Sistema de perguntas e respostas
 
-#### Avaliativas 
 
 #### Extras
 
