--- a/2020_2.md
+++ b/2020_2.md
@@ -29,11 +29,6 @@ Observação: O preenchimento dos formulários registra a participação nas aul
   * [Metodologia](https://youtu.be/kN2P7LoxVKs)
   * [Avaliações](https://youtu.be/he14LmG1Gvw)
   * [Ferramentas de apoio](https://youtu.be/mTJ0Uwww0-g)
-  
-  
-
-
-
 
 ### Introdução ao Aprendizado de Máquina 
 * [Vídeos e Form: Introdução ao Aprendizado de Máquina](https://docs.google.com/forms/d/e/1FAIpQLSfPazkdXRr3WQI00g6gzig64_bDbR-Jh9T9_nSLwfdEeYVpHA/viewform?usp=sf_link) 
@@ -47,6 +42,12 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Código utilizado no vídeo](https://colab.research.google.com/drive/1cnvCdgxz0eHWzSSjKrMPD1LLj5VE21rv?usp=sharing)  
 * [Exercício](https://colab.research.google.com/drive/1Ije_CQ1uywwhaQU9bnDEiSmS0b9AJq1E?usp=sharing) 
 * [Desafio](https://colab.research.google.com/drive/1cY0xY7G8hh6OLBndI7_M5i48ZBqdSBA7?usp=sharing)
+
+* Aula síncrona do dia 26/01/2021 
+  * [Vídeo: Prática com regressão linear simples](https://youtu.be/WTIOoHNFsGQ)
+  * [Código: Regressão com a população brasileira](https://colab.research.google.com/drive/13ucrTNkmJIH-XxXQiMS5q6ZTxBC1j6R0?usp=sharing)
+  * [Vídeo: Prática com regressão linear múltipla](https://youtu.be/U9xhYLWhwpc) 
+  * [Código: Regressão linear múltipla - prever o lucro de uma startup](https://colab.research.google.com/drive/13ucrTNkmJIH-XxXQiMS5q6ZTxBC1j6R0?authuser=2#scrollTo=85iQS8VhaCZt)
 
 ### Breve introdução sobre Multilayer Perceptron 
 * [Vídeos e Form: MLP Parte 1](https://docs.google.com/forms/d/e/1FAIpQLSdTYkkkG5m4YgZxFOUJdT-Qs5jF9l-bYtxgK9cdaKKuRFDNyg/viewform?usp=sf_link)
