--- a/2020_2.md
+++ b/2020_2.md
@@ -45,9 +45,9 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Desafio](https://colab.research.google.com/drive/1cY0xY7G8hh6OLBndI7_M5i48ZBqdSBA7?usp=sharing)
 * Aula síncrona do dia 26/01/2021 
   * [Vídeo: Prática com regressão linear simples](https://youtu.be/WTIOoHNFsGQ)
-  * [Código: Regressão com a população brasileira](https://colab.research.google.com/drive/13ucrTNkmJIH-XxXQiMS5q6ZTxBC1j6R0?usp=sharing)
+  * [Código: Regressão com a população brasileira](https://colab.research.google.com/drive/1dCF8pGdv6N4-C09oP7cJbuSYvTK5zhKj?usp=sharing)
   * [Vídeo: Prática com regressão linear múltipla](https://youtu.be/U9xhYLWhwpc) 
-  * [Código: Regressão linear múltipla - prever o lucro de uma startup](https://colab.research.google.com/drive/13ucrTNkmJIH-XxXQiMS5q6ZTxBC1j6R0?authuser=2#scrollTo=85iQS8VhaCZt)
+  * [Código: Regressão linear múltipla - prever o lucro de uma startup](https://colab.research.google.com/drive/13ucrTNkmJIH-XxXQiMS5q6ZTxBC1j6R0?usp=sharing)
 
 ### Breve introdução sobre Multilayer Perceptron 
 * [Vídeos e Form: MLP Parte 1](https://docs.google.com/forms/d/e/1FAIpQLSdTYkkkG5m4YgZxFOUJdT-Qs5jF9l-bYtxgK9cdaKKuRFDNyg/viewform?usp=sf_link)
