--- a/2020_2.md
+++ b/2020_2.md
@@ -59,6 +59,10 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Vídeos e Form: SVM](https://docs.google.com/forms/d/e/1FAIpQLSeoDr4aCyHvuZlxxZJFa1c65n8f9eo_11DqSFY-YFkHEc-iNA/viewform?usp=sf_link) 
 * [Exemplo de código: SVM Linear](https://colab.research.google.com/drive/1VYmZBcf2FHmz_gwPRxllxwoy0nTaU8X9?usp=sharing) 
 * [Slides](https://docs.google.com/presentation/d/19mAI5sjOWURpzuKpoFjbjmCkjUXUysU_kysfbksmVAg/edit?usp=sharing) 
+* Aula síncrona do dia 26/01/2021:
+  * [Vídeo: prática sobre classificação usando SVM](https://youtu.be/R3T4KnYg-tE) 
+  * [Código: SVM compra produto](https://colab.research.google.com/drive/1w7Tt9UFngIkEjThnNlYj8Tki6EwVWxeP?usp=sharing)
+  
 
 ### Introdução sobre _Deep Learning_
 * [Vídeos e Form: _Deep Learning_](https://docs.google.com/forms/d/e/1FAIpQLSefGHcBnH4_wjdSuX2BxqJ85tKRTMr5pVHcHtLZvJ5XBCwBXw/viewform?usp=sf_link)
