--- a/2020_2.md
+++ b/2020_2.md
@@ -69,6 +69,9 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Slides: _Deep Learning_](https://docs.google.com/presentation/d/1pxztvhuOc36D76cDW86oj8nGZAIlQSEn2GZJE0GzGLw/edit?usp=sharing)
 * [Exemplo de código: MLP - Exemplo sobre se um cliente deixa um banco](https://colab.research.google.com/drive/1NndIE2zvup_aWqSG06JR7i6_WxXQ-xMU?usp=sharing)
 * [Exemplo de código: Reconhecimento de caracteres escritos a mão](https://colab.research.google.com/drive/1gGi-n3vAJkjdEKMYLZkSCXoDhyRS1tSJ?usp=sharing)
+* Aula síncrona do dia 23/03/2021
+  * [Aula Prática: Reconhecimento de caracteres escritos a mão com Deep Learning](https://youtu.be/lXCz0tduSh8) 
+  * [Código: Reconhecimento de caracteres escritos a mão com Deep Learning](https://colab.research.google.com/drive/18fPqtpy6AV5Uo-WlmyFe6Epj-7UlrXgg) 
 
 ### Introdução sobre K-Means
 * [Vídeos e Form: K-Means](https://docs.google.com/forms/d/e/1FAIpQLScNKNALY3P645shEayJzPqO4N9P5-8Q6DsKcp30QO4UTevF-Q/viewform?usp=sf_link)
