--- a/2020_2.md
+++ b/2020_2.md
@@ -43,11 +43,12 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Código utilizado no vídeo](https://colab.research.google.com/drive/1cnvCdgxz0eHWzSSjKrMPD1LLj5VE21rv?usp=sharing)  
 * [Exercício](https://colab.research.google.com/drive/1Ije_CQ1uywwhaQU9bnDEiSmS0b9AJq1E?usp=sharing) 
 * [Desafio](https://colab.research.google.com/drive/1cY0xY7G8hh6OLBndI7_M5i48ZBqdSBA7?usp=sharing)
-* Aula síncrona do dia 26/01/2021 
-  * [Vídeo: Prática com regressão linear simples](https://youtu.be/WTIOoHNFsGQ)
-  * [Código: Regressão com a população brasileira](https://colab.research.google.com/drive/1dCF8pGdv6N4-C09oP7cJbuSYvTK5zhKj?usp=sharing)
-  * [Vídeo: Prática com regressão linear múltipla](https://youtu.be/U9xhYLWhwpc) 
-  * [Código: Regressão linear múltipla - prever o lucro de uma startup](https://colab.research.google.com/drive/13ucrTNkmJIH-XxXQiMS5q6ZTxBC1j6R0?usp=sharing)
+
+### Aula síncrona do dia 26/01/2021 
+* [Vídeo: Prática com regressão linear simples](https://youtu.be/WTIOoHNFsGQ)
+* [Código: Regressão com a população brasileira](https://colab.research.google.com/drive/1dCF8pGdv6N4-C09oP7cJbuSYvTK5zhKj?usp=sharing)
+* [Vídeo: Prática com regressão linear múltipla](https://youtu.be/U9xhYLWhwpc) 
+* [Código: Regressão linear múltipla - prever o lucro de uma startup](https://colab.research.google.com/drive/13ucrTNkmJIH-XxXQiMS5q6ZTxBC1j6R0?usp=sharing)
 
 ### Breve introdução sobre Multilayer Perceptron 
 * [Vídeos e Form: MLP Parte 1](https://docs.google.com/forms/d/e/1FAIpQLSdTYkkkG5m4YgZxFOUJdT-Qs5jF9l-bYtxgK9cdaKKuRFDNyg/viewform?usp=sf_link)
@@ -59,9 +60,15 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Vídeos e Form: SVM](https://docs.google.com/forms/d/e/1FAIpQLSeoDr4aCyHvuZlxxZJFa1c65n8f9eo_11DqSFY-YFkHEc-iNA/viewform?usp=sf_link) 
 * [Exemplo de código: SVM Linear](https://colab.research.google.com/drive/1VYmZBcf2FHmz_gwPRxllxwoy0nTaU8X9?usp=sharing) 
 * [Slides](https://docs.google.com/presentation/d/19mAI5sjOWURpzuKpoFjbjmCkjUXUysU_kysfbksmVAg/edit?usp=sharing) 
-* Aula síncrona do dia 02/02/2021:
-  * [Vídeo: prática sobre classificação usando SVM](https://youtu.be/R3T4KnYg-tE) 
-  * [Código: SVM compra produto](https://colab.research.google.com/drive/1w7Tt9UFngIkEjThnNlYj8Tki6EwVWxeP?usp=sharing)
+
+### Aula síncrona do dia 02/02/2021:
+* [Vídeo: prática sobre classificação usando SVM](https://youtu.be/R3T4KnYg-tE) 
+* [Código: SVM compra produto](https://colab.research.google.com/drive/1w7Tt9UFngIkEjThnNlYj8Tki6EwVWxeP?usp=sharing)
+
+### Aula síncrona do dia 09/02/2021:
+* [Vídeo: Classificação dados com aprendizado de máquina](https://youtu.be/_p8Mbe75ZLk) 
+* [Vídeo: Exemplo comparando a resposta de um modelo linear e outro não-linear](https://youtu.be/YFkVERllgAQ)
+* [Vídeo: Construindo e treinando uma rede MLP simples com keras e tensorflow](https://youtu.be/qyMO5UHLgs4) 
   
 
 ### Introdução sobre _Deep Learning_
@@ -69,9 +76,11 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Slides: _Deep Learning_](https://docs.google.com/presentation/d/1pxztvhuOc36D76cDW86oj8nGZAIlQSEn2GZJE0GzGLw/edit?usp=sharing)
 * [Exemplo de código: MLP - Exemplo sobre se um cliente deixa um banco](https://colab.research.google.com/drive/1NndIE2zvup_aWqSG06JR7i6_WxXQ-xMU?usp=sharing)
 * [Exemplo de código: Reconhecimento de caracteres escritos a mão](https://colab.research.google.com/drive/1gGi-n3vAJkjdEKMYLZkSCXoDhyRS1tSJ?usp=sharing)
-* Aula síncrona do dia 23/03/2021
-  * [Aula Prática: Reconhecimento de caracteres escritos a mão com Deep Learning](https://youtu.be/lXCz0tduSh8) 
-  * [Código: Reconhecimento de caracteres escritos a mão com Deep Learning](https://colab.research.google.com/drive/18fPqtpy6AV5Uo-WlmyFe6Epj-7UlrXgg) 
+* 
+
+### Aula síncrona do dia 23/03/2021
+* [Aula Prática: Reconhecimento de caracteres escritos a mão com Deep Learning](https://youtu.be/lXCz0tduSh8) 
+* [Código: Reconhecimento de caracteres escritos a mão com Deep Learning](https://colab.research.google.com/drive/18fPqtpy6AV5Uo-WlmyFe6Epj-7UlrXgg) 
 
 ### Introdução sobre K-Means
 * [Vídeos e Form: K-Means](https://docs.google.com/forms/d/e/1FAIpQLScNKNALY3P645shEayJzPqO4N9P5-8Q6DsKcp30QO4UTevF-Q/viewform?usp=sf_link)
