--- a/2020_2.md
+++ b/2020_2.md
@@ -56,7 +56,7 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Exemplo de código: Perceptron](https://colab.research.google.com/drive/1jbFCvifaAou19mlu2pI3Rso8DoMow_zl?usp=sharing) 
 * [Slides](https://docs.google.com/presentation/d/1oIzH-SNbJ3_4vYZdt_IZQi3537BUJKsvio_oV8c8Bnc/edit?usp=sharing) 
 
-### Introdução sobre Suport Vector Machine (SVM)
+### Introdução sobre Support Vector Machine (SVM)
 * [Vídeos e Form: SVM](https://docs.google.com/forms/d/e/1FAIpQLSeoDr4aCyHvuZlxxZJFa1c65n8f9eo_11DqSFY-YFkHEc-iNA/viewform?usp=sf_link) 
 * [Exemplo de código: SVM Linear](https://colab.research.google.com/drive/1VYmZBcf2FHmz_gwPRxllxwoy0nTaU8X9?usp=sharing) 
 * [Slides](https://docs.google.com/presentation/d/19mAI5sjOWURpzuKpoFjbjmCkjUXUysU_kysfbksmVAg/edit?usp=sharing) 
