--- a/2020_2.md
+++ b/2020_2.md
@@ -87,6 +87,10 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Slides](https://docs.google.com/presentation/d/1hzeAFwgHNZ7pr_POzd4_2lXUgOz_vrVfuhjxl6tbBCs/edit?usp=sharing)
 * [Exemplo de código: perfil de clientes de uma loja](https://colab.research.google.com/drive/15Q-gTih7v2f5pYc64xQa2ytzX2gisX0q?usp=sharing)
 
+### Aula síncrona do dia 02/03/2021
+* [Aula prática: introdução ao K-Means - Agrupamento](https://youtu.be/t_107z0RHF8)
+* [Código](https://colab.research.google.com/drive/1nc5RD1wMHvROPILgdJVT2GSzwbscLLsw?usp=sharing)
+
 ### Introdução sobre Rede SOM 
 * [Vídeos e Form: Rede SOM](https://docs.google.com/forms/d/e/1FAIpQLSemMYcbVnQgDOYMIEB9M_uaK2RSLciTqzgdIZtwAn2vB_KQsA/viewform?usp=sf_link)
 * [Slides](https://docs.google.com/presentation/d/1vGS--E6VbtohvVkUo23GM-0MsL-EMTnxAXKcSHiomLI/edit?usp=sharing)
