--- a/2020_2.md
+++ b/2020_2.md
@@ -96,6 +96,11 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Slides](https://docs.google.com/presentation/d/1vGS--E6VbtohvVkUo23GM-0MsL-EMTnxAXKcSHiomLI/edit?usp=sharing)
 * [Exemplo de código: visualizar os perfis de alunos da Escola de Ciência e Tecnologia da UFRN](https://colab.research.google.com/drive/1PX9YlNGx_pjgesMsnhyjrXI-nsuJOdWI?usp=sharing)
 
+### Aula síncrona do dia 09/03/2021
+* [Aula prática: introdução à rede SOM - Visualização de Dados](https://youtu.be/-mEn7puBD84)
+* [Código](https://colab.research.google.com/drive/1S-aMgBqFe9OgGdjURrWs86l7LaHLRuRJ?usp=sharing)
+
+
 ### Introdução sobre Rede Neural Convolucional 
 * [Vídeos e Form](https://docs.google.com/forms/d/e/1FAIpQLSev6WOXJcQj9cIDlHYPIfsbPvpkDVsl2rqI4g7J6flD-03LOg/viewform?usp=sf_link) 
 * [Código: reconhecimento de números escritos à mão](https://colab.research.google.com/drive/1gd9aB82vSHAEb_nHV0wJJZU4-gSfPbHN?usp=sharing) 
