--- a/2020_2.md
+++ b/2020_2.md
@@ -112,6 +112,10 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Form e vídeos](https://forms.gle/UAbKYR8AesufY6q38)
 * [Código: Análise de sentimentos ](https://colab.research.google.com/drive/1n80Us6FJZ74XyYIyl8iiqbSyIBapk9Yj?usp=sharing)
 
+### Aula síncrona do dia 07/04/2021
+* [Aula prática: Introdução à Processamento de Linguagem Natural](https://youtu.be/ZnGC0tQLjNM)
+* [Código](https://colab.research.google.com/drive/1otpdkZhfhBwJrU6jD8pvtQAzzsrn-lGo?usp=sharing) 
+
 
 ### Atividades 
 #### Avaliativas (Previsão)
