--- a/2020_2.md
+++ b/2020_2.md
@@ -100,12 +100,22 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Aula prática: introdução à rede SOM - Visualização de Dados](https://youtu.be/-mEn7puBD84)
 * [Código](https://colab.research.google.com/drive/1S-aMgBqFe9OgGdjURrWs86l7LaHLRuRJ?usp=sharing)
 
+### Aula síncrona do dia 16/03/2021
+* [Vídeo: Análise de perfis e desempenho em LoP]()
+* [Código: Análise de perfis e desempenho em LoP](https://colab.research.google.com/drive/1lVfiGPf1yyDx7Zv_AUrS4o3bgO0E0EzH?usp=sharing)
 
 ### Introdução sobre Rede Neural Convolucional 
 * [Vídeos e Form](https://docs.google.com/forms/d/e/1FAIpQLSev6WOXJcQj9cIDlHYPIfsbPvpkDVsl2rqI4g7J6flD-03LOg/viewform?usp=sf_link) 
 * [Código: reconhecimento de números escritos à mão](https://colab.research.google.com/drive/1gd9aB82vSHAEb_nHV0wJJZU4-gSfPbHN?usp=sharing) 
 * [Slides](https://docs.google.com/presentation/d/1KTPsi2Y4U63cuNUoCh32sd3VJfyYf6MA7NT3fHucboM/edit?usp=drivesdk)
 
+### Aula síncrona do dia 23/03/2021
+* Prática com Redes Convolucionais - Parte 1 (Ocorreu uma falha na gravação do vídeo) 
+* [Código](https://colab.research.google.com/drive/1HA10UzAOQ71kaAG4AnMG9YCrpdm4oVa_?usp=sharing)
+
+### Aula síncrona do dia 30/03/2021
+* [Prática com Redes Convolucionais - parte 2](https://youtu.be/pCHKzOtLWOs)
+* [Código](https://colab.research.google.com/drive/1pTQJFZhH3JAUZX1jYRpaV6a18j9aatYu?usp=sharing)
 
 ### Introdução sobre Processamento de Linguagem Natural (NLP) 
 * [Slides: NLP ](https://docs.google.com/forms/d/e/1FAIpQLScSCcux1V-fKBrYJAC_p_tqMSSSIIzvqPOU2Po59p6XiMnSmg/viewform?usp=sf_link)
