--- a/2020_2.md
+++ b/2020_2.md
@@ -101,7 +101,7 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Código](https://colab.research.google.com/drive/1S-aMgBqFe9OgGdjURrWs86l7LaHLRuRJ?usp=sharing)
 
 ### Aula síncrona do dia 16/03/2021
-* [Vídeo: Análise de perfis e desempenho em LoP]()
+* [Vídeo: Análise de perfis e desempenho em LoP](https://youtu.be/RFi62fy17tY)
 * [Código: Análise de perfis e desempenho em LoP](https://colab.research.google.com/drive/1lVfiGPf1yyDx7Zv_AUrS4o3bgO0E0EzH?usp=sharing)
 
 ### Introdução sobre Rede Neural Convolucional 
