--- a/2020_2.md
+++ b/2020_2.md
@@ -123,9 +123,12 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Código: Análise de sentimentos ](https://colab.research.google.com/drive/1n80Us6FJZ74XyYIyl8iiqbSyIBapk9Yj?usp=sharing)
 
 ### Aula síncrona do dia 07/04/2021
-* [Aula prática: Introdução à Processamento de Linguagem Natural](https://youtu.be/ZnGC0tQLjNM)
+* [Aula prática - parte 1: Introdução à Processamento de Linguagem Natural](https://youtu.be/ZnGC0tQLjNM)
 * [Código](https://colab.research.google.com/drive/1otpdkZhfhBwJrU6jD8pvtQAzzsrn-lGo?usp=sharing) 
 
+### Aula síncrona do dia 14/04/2021
+* [Aula prática - parte 2: Introdução à Processamento de Linguagem Natural](https://youtu.be/gcbeEvpwCZ0)
+* [Código](https://colab.research.google.com/drive/1eJRivNcV_ZdqJqEoX9WhcnusV2-sRKm1?usp=sharing)
 
 ### Atividades 
 #### Avaliativas (Previsão)
