--- a/2023_1.md
+++ b/2023_1.md
@@ -55,17 +55,15 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Vídeos e Form: MLP Parte 2](https://docs.google.com/forms/d/e/1FAIpQLSfpQKRql-glvQdagyxVhsNIBUVOBkskpLNgZVZTOr6Dn-C6Ag/viewform?usp=sf_link) 
 * [Exemplo de código: Perceptron](https://colab.research.google.com/drive/1jbFCvifaAou19mlu2pI3Rso8DoMow_zl?usp=sharing) 
 * [Slides](https://docs.google.com/presentation/d/1oIzH-SNbJ3_4vYZdt_IZQi3537BUJKsvio_oV8c8Bnc/edit?usp=sharing) 
+* [Vídeo: Classificação dados com aprendizado de máquina](https://youtu.be/_p8Mbe75ZLk) 
+* [Vídeo: Exemplo comparando a resposta de um modelo linear e outro não-linear](https://youtu.be/YFkVERllgAQ)
+* [Vídeo: Construindo e treinando uma rede MLP simples com keras e tensorflow](https://youtu.be/qyMO5UHLgs4) 
+* [Código: MLP - Multilayer Perceptron](https://colab.research.google.com/drive/1wR1xoQGDrgDUysDqWkhVdvNj-qluo2pk?usp=sharing)
 
 ### Introdução sobre Support Vector Machine (SVM)
 * [Vídeos e Form: SVM](https://docs.google.com/forms/d/e/1FAIpQLSeoDr4aCyHvuZlxxZJFa1c65n8f9eo_11DqSFY-YFkHEc-iNA/viewform?usp=sf_link) 
 * [Exemplo de código: SVM Linear](https://colab.research.google.com/drive/1VYmZBcf2FHmz_gwPRxllxwoy0nTaU8X9?usp=sharing) 
 * [Slides](https://docs.google.com/presentation/d/19mAI5sjOWURpzuKpoFjbjmCkjUXUysU_kysfbksmVAg/edit?usp=sharing) 
-
-### Aula síncrona do dia 09/02/2021:
-* [Vídeo: Classificação dados com aprendizado de máquina](https://youtu.be/_p8Mbe75ZLk) 
-* [Vídeo: Exemplo comparando a resposta de um modelo linear e outro não-linear](https://youtu.be/YFkVERllgAQ)
-* [Vídeo: Construindo e treinando uma rede MLP simples com keras e tensorflow](https://youtu.be/qyMO5UHLgs4) 
-* [Código: MLP - Multilayer Perceptron](https://colab.research.google.com/drive/1wR1xoQGDrgDUysDqWkhVdvNj-qluo2pk?usp=sharing)
 
 ### Support Vector Machine
 * [Vídeo: prática sobre classificação usando SVM](https://youtu.be/R3T4KnYg-tE) 
@@ -80,7 +78,6 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 ### _Deep Learning_
 * [Aula Prática: Reconhecimento de caracteres escritos a mão com Deep Learning](https://youtu.be/lXCz0tduSh8) 
 * [Código: Reconhecimento de caracteres escritos a mão com Deep Learning](https://colab.research.google.com/drive/18fPqtpy6AV5Uo-WlmyFe6Epj-7UlrXgg) 
-
 
 ### Introdução sobre K-Means
 * [Vídeos e Form: K-Means](https://docs.google.com/forms/d/e/1FAIpQLScNKNALY3P645shEayJzPqO4N9P5-8Q6DsKcp30QO4UTevF-Q/viewform?usp=sf_link)
@@ -128,13 +125,14 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 
 ### Atividades 
 #### Avaliativas (Previsão)
-1. Prever o lucro de uma startup
-1. Previsão de compra de um produto
-1. Reconhecimento de dígitos escritos a mão
-1. Perfil de clientes de uma loja 
-1. Análise de perfil de estudantes
-1. Reconhecimento de faces
-1. Sistema de perguntas e respostas
+* Prever o lucro de uma startup
+* Previsão de compra de um produto
+* Reconhecimento de dígitos escritos a mão
+* Perfil de clientes de uma loja 
+* Análise de perfil de estudantes
+* Reconhecimento de faces
+* Sistema de perguntas e respostas
+* Dados de saúde do governo Federal 
 
 
 #### Extras
