--- a/2023_1.md
+++ b/2023_1.md
@@ -147,6 +147,7 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 
 
 ## Bibliografia Básica 
+* PROVOST e FAWCETT; **Data Sciene para Negócios 
 * GÉRON; **Hands-On Machine Learning with Scikit-Learn and TensorFlow: Concepts, Tools, and Techniques to Build Intelligent Systems**. O’REILLY, 2017.
 * MITCHELL; **Machine Learning**, Publisher: McGraw-Hill Science/Engineering/Math, 1997.
 * NEGNEVITSKY; **Artificial Intelligence: A Guide to Intelligent Systems**, Second Edition, Publisher Addison Wesley.
