--- a/2023_1.md
+++ b/2023_1.md
@@ -7,16 +7,16 @@ Conteúdo de apoio sobre Machine Learning da disciplina Tópicos Avançados em I
 * [Referências Bibliográficas](https://github.com/ect-info/dpia/blob/master/Bibliografia.md) 
 * [Referências de Cursos Online](https://github.com/ect-info/ml/blob/master/cursos_online.md) 
 * [Outras Referências](https://github.com/ect-info/ml/blob/master/outras_referencias.md)
-* [Material de Aula](https://github.com/ect-info/ml/blob/master/2020_2.md#material-de-aula) 
-* [Atividades](https://github.com/ect-info/ml/blob/master/2020_2.md#atividades)
-* [Cronograma](https://github.com/ect-info/ml/blob/master/cronograma_2020_2.md)
+* [Material de Aula](https://github.com/ect-info/ml/blob/master/2023_1.md#material-de-aula) 
+* [Atividades](https://github.com/ect-info/ml/blob/master/2023_1.md#atividades)
+* [Cronograma](https://docs.google.com/spreadsheets/d/1-XTZp_tBehg792K9LBNFADA_Z5CL8Bvx2WCzF3B_Jr0/edit?usp=sharing)
  
 
 ## Canal de Comunicação 
-* Para compartilhamento de conhecimento entre os estudantes:  https://discord.gg/mp8aPyh
+* Para compartilhamento de conhecimento entre os estudantes: https://discord.gg/mp8aPyh
 
 ## Compreendendo o Perfil da Turma 
-* O objetivo deste formulário é conhecer o perfil da turma ECT2702 - Tópicos I - T01 (2020.2)  - para poder ajustar melhor as metodologias de ensino / aprendizagem. 
+* O objetivo deste formulário é conhecer o perfil da turma ECT2702 - Tópicos I - para poder ajustar melhor as metodologias de ensino / aprendizagem. 
 * Gostaria que todos os alunos preenchessem o formulário: https://forms.gle/KLb1homacdQuW7EB7 
 
 ## Material de Aula 
