--- a/2023_1.md
+++ b/2023_1.md
@@ -36,6 +36,11 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Vídeos e Form: Introdução ML - Principais Conceitos](https://docs.google.com/forms/d/e/1FAIpQLSe0lODS07EpiFua5VSONKFupuaYw8hmNnlEc3qnZvlQuJ5pyw/viewform?usp=sf_link) 
 * [Slides: Conceitos](https://docs.google.com/presentation/d/1UKK1HW9Wfh-q2qqAloiJYp179EVMw5GuVu3Yzphefgw/edit?usp=sharing)   
 
+#### Prática 
+* Conhecer um Arquivo CSV
+* Abrir um _DataFrame_ com Pandas 
+* Visualizar alguns dados 
+
 ### Breve introdução sobre Regressão Linear  
 
 * [Vídeos e Form](https://docs.google.com/forms/d/e/1FAIpQLSfh3uxvNLzaKatVBdn529wOkrLWhUmzA97lwBAGA_1ggJMT6g/viewform?usp=sf_link) 
