--- a/2023_1.md
+++ b/2023_1.md
@@ -49,6 +49,11 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Exercício](https://colab.research.google.com/drive/1Ije_CQ1uywwhaQU9bnDEiSmS0b9AJq1E?usp=sharing) 
 * [Desafio](https://colab.research.google.com/drive/1cY0xY7G8hh6OLBndI7_M5i48ZBqdSBA7?usp=sharing)
 
+#### Prática 
+* Plote de gráfico em linha 
+* Plote de gráfio de dispersão de pontos 
+* Treinamento de um modelo simples de _Machine Learning_
+
 ### Regressão Linear 
 * [Vídeo: Prática com regressão linear simples](https://youtu.be/WTIOoHNFsGQ)
 * [Código: Regressão com a população brasileira](https://colab.research.google.com/drive/1dCF8pGdv6N4-C09oP7cJbuSYvTK5zhKj?usp=sharing)
