--- a/2023_1.md
+++ b/2023_1.md
@@ -70,6 +70,10 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Vídeo: Construindo e treinando uma rede MLP simples com keras e tensorflow](https://youtu.be/qyMO5UHLgs4) 
 * [Código: MLP - Multilayer Perceptron](https://colab.research.google.com/drive/1wR1xoQGDrgDUysDqWkhVdvNj-qluo2pk?usp=sharing)
 
+#### Prátia 
+* Treinar uma rede MLP para a [base de dados de diabetes](https://raw.githubusercontent.com/ect-info/ml/master/dados/diabetes.csv) 
+* Mais dados https://www.kaggle.com/datasets 
+
 ### Introdução sobre Support Vector Machine (SVM)
 * [Vídeos e Form: SVM](https://docs.google.com/forms/d/e/1FAIpQLSeoDr4aCyHvuZlxxZJFa1c65n8f9eo_11DqSFY-YFkHEc-iNA/viewform?usp=sf_link) 
 * [Exemplo de código: SVM Linear](https://colab.research.google.com/drive/1VYmZBcf2FHmz_gwPRxllxwoy0nTaU8X9?usp=sharing) 
