--- a/2023_1.md
+++ b/2023_1.md
@@ -70,7 +70,7 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Vídeo: Construindo e treinando uma rede MLP simples com keras e tensorflow](https://youtu.be/qyMO5UHLgs4) 
 * [Código: MLP - Multilayer Perceptron](https://colab.research.google.com/drive/1wR1xoQGDrgDUysDqWkhVdvNj-qluo2pk?usp=sharing)
 
-#### Prátia 
+#### Prática 
 * Treinar uma rede MLP para a [base de dados de diabetes](https://raw.githubusercontent.com/ect-info/ml/master/dados/diabetes.csv) 
 * Mais dados https://www.kaggle.com/datasets 
 
