--- a/2023_1.md
+++ b/2023_1.md
@@ -83,6 +83,11 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Vídeo: prática sobre classificação usando SVM](https://youtu.be/R3T4KnYg-tE) 
 * [Código: SVM compra produto](https://colab.research.google.com/drive/1w7Tt9UFngIkEjThnNlYj8Tki6EwVWxeP?usp=sharing)
 
+Prática
+* Treinar o modelo SVM linear e o modelo SVM RBF com a base de dados de diabetes
+* Consultar a documentação https://scikit-learn.org/stable/modules/svm.html#svm 
+* Mais dados https://www.kaggle.com/datasets
+
 ### Introdução sobre _Deep Learning_
 * [Vídeos e Form: _Deep Learning_](https://docs.google.com/forms/d/e/1FAIpQLSefGHcBnH4_wjdSuX2BxqJ85tKRTMr5pVHcHtLZvJ5XBCwBXw/viewform?usp=sf_link)
 * [Slides: _Deep Learning_](https://docs.google.com/presentation/d/1pxztvhuOc36D76cDW86oj8nGZAIlQSEn2GZJE0GzGLw/edit?usp=sharing)
