--- a/2023_1.md
+++ b/2023_1.md
@@ -84,7 +84,7 @@ Observação: O preenchimento dos formulários registra a participação nas aul
 * [Código: SVM compra produto](https://colab.research.google.com/drive/1w7Tt9UFngIkEjThnNlYj8Tki6EwVWxeP?usp=sharing)
 
 Prática
-* Treinar o modelo SVM linear e o modelo SVM RBF com a base de dados de diabetes
+* Treinar o modelo SVM linear e o modelo SVM RBF com [base de dados de diabetes](https://raw.githubusercontent.com/ect-info/ml/master/dados/diabetes.csv) 
 * Consultar a documentação https://scikit-learn.org/stable/modules/svm.html#svm 
 * Mais dados https://www.kaggle.com/datasets
 
