--- a/2023_1.md
+++ b/2023_1.md
@@ -98,6 +98,22 @@ Prática
 * [Aula Prática: Reconhecimento de caracteres escritos a mão com Deep Learning](https://youtu.be/lXCz0tduSh8) 
 * [Código: Reconhecimento de caracteres escritos a mão com Deep Learning](https://colab.research.google.com/drive/18fPqtpy6AV5Uo-WlmyFe6Epj-7UlrXgg) 
 
+Prática
+* Treinar uma rede MLP, pode ser uma arquitetura mais simples, para classificação 
+* Sugestões de base de dados: 
+  * [Cancer Classification 🦠 (97% Accuracy)](https://www.kaggle.com/code/guhbrandao/cancer-classification-97-accuracy/input)  
+  * [Cancer Data](https://www.kaggle.com/datasets/erdemtaha/cancer-data)
+  * [Titanic dataset](https://www.kaggle.com/code/biswajee/titanic-dataset/input) 
+  * [Heart Attack Analysis](https://www.kaggle.com/datasets/rashikrahmanpritom/heart-attack-analysis-prediction-dataset) 
+  * [Predict students' dropout and academic success](https://www.kaggle.com/datasets/thedevastator/higher-education-predictors-of-student-retention) 
+
+Sugestão de leitura
+* [Tratamento de atributos categóricos](https://analyticsindiamag.com/complete-guide-to-handling-categorical-data-using-scikit-learn/) 
+
+Animação
+* [Funcionamento de uma rede MLP](https://playground.tensorflow.org/)
+
+
 ### Introdução sobre K-Means
 * [Vídeos e Form: K-Means](https://docs.google.com/forms/d/e/1FAIpQLScNKNALY3P645shEayJzPqO4N9P5-8Q6DsKcp30QO4UTevF-Q/viewform?usp=sf_link)
 * [Slides](https://docs.google.com/presentation/d/1hzeAFwgHNZ7pr_POzd4_2lXUgOz_vrVfuhjxl6tbBCs/edit?usp=sharing)
@@ -107,6 +123,11 @@ Prática
 * [Aula prática: introdução ao K-Means - Agrupamento](https://youtu.be/t_107z0RHF8)
 * [Código](https://colab.research.google.com/drive/1nc5RD1wMHvROPILgdJVT2GSzwbscLLsw?usp=sharing)
 
+Prática
+* Escolher uma base de dados para agrupamentos, usar o k-means, e analizar os valores dos centroids
+* Sugestões de base de dados: 
+  *  []()
+   
 ### Introdução sobre Rede SOM 
 * [Vídeos e Form: Rede SOM](https://docs.google.com/forms/d/e/1FAIpQLSemMYcbVnQgDOYMIEB9M_uaK2RSLciTqzgdIZtwAn2vB_KQsA/viewform?usp=sf_link)
 * [Slides](https://docs.google.com/presentation/d/1vGS--E6VbtohvVkUo23GM-0MsL-EMTnxAXKcSHiomLI/edit?usp=sharing)
