--- a/2023_1.md
+++ b/2023_1.md
@@ -126,7 +126,9 @@ Animação
 Prática
 * Escolher uma base de dados para agrupamentos, usar o k-means, e analizar os valores dos centroids
 * Sugestões de base de dados: 
-  *  []()
+  * [Customer Segmentation: Clustering](https://www.kaggle.com/code/karnikakapoor/customer-segmentation-clustering/input)
+  * [Customer Clustering](https://www.kaggle.com/datasets/dev0914sharma/customer-clustering?resource=download&select=segmentation+data.csv)
+  * [Customer segmentation data](https://raw.githubusercontent.com/ect-info/ml/master/dados/customer%20segmentation%20data.csv)
    
 ### Introdução sobre Rede SOM 
 * [Vídeos e Form: Rede SOM](https://docs.google.com/forms/d/e/1FAIpQLSemMYcbVnQgDOYMIEB9M_uaK2RSLciTqzgdIZtwAn2vB_KQsA/viewform?usp=sf_link)
@@ -145,6 +147,9 @@ Prática
 * [Vídeos e Form](https://docs.google.com/forms/d/e/1FAIpQLSev6WOXJcQj9cIDlHYPIfsbPvpkDVsl2rqI4g7J6flD-03LOg/viewform?usp=sf_link) 
 * [Código: reconhecimento de números escritos à mão](https://colab.research.google.com/drive/1gd9aB82vSHAEb_nHV0wJJZU4-gSfPbHN?usp=sharing) 
 * [Slides](https://docs.google.com/presentation/d/1KTPsi2Y4U63cuNUoCh32sd3VJfyYf6MA7NT3fHucboM/edit?usp=drivesdk)
+
+Extras: 
+[Vídeo: The Convolutional Neural Network (Animated Introduction)](https://www.youtube.com/watch?v=H1ZC9COwtMs) 
 
 ### Prática Rede Neural Convolucional 
 * Prática com Redes Convolucionais - Parte 1 - Reconhecimento de carácteres escritos a mão
