--- a/2023_1.md
+++ b/2023_1.md
@@ -152,10 +152,16 @@ Extras:
 [Vídeo: The Convolutional Neural Network (Animated Introduction)](https://www.youtube.com/watch?v=H1ZC9COwtMs) 
 
 ### Prática Rede Neural Convolucional 
+Atividade: 
+* Treinar uma Rede CNN para a base de dados "Fashion MNIST" 
+  * Exemplo de código: https://colab.research.google.com/drive/15DMm3Qf3IcN-syiNIvy_O04N5k9bBZV6?usp=sharing  
+
+Aulas anteriores:
 * Prática com Redes Convolucionais - Parte 1 - Reconhecimento de carácteres escritos a mão
 * [Código](https://colab.research.google.com/drive/1HA10UzAOQ71kaAG4AnMG9YCrpdm4oVa_?usp=sharing)
 * [Prática com Redes Convolucionais - parte 2](https://youtu.be/pCHKzOtLWOs)
 * [Código](https://colab.research.google.com/drive/1pTQJFZhH3JAUZX1jYRpaV6a18j9aatYu?usp=sharing)
+
 
 ### Introdução sobre Processamento de Linguagem Natural (NLP) 
 * [Slides: NLP ](https://docs.google.com/forms/d/e/1FAIpQLScSCcux1V-fKBrYJAC_p_tqMSSSIIzvqPOU2Po59p6XiMnSmg/viewform?usp=sf_link)
