--- a/2023_1.md
+++ b/2023_1.md
@@ -93,6 +93,8 @@ Prática
 * [Slides: _Deep Learning_](https://docs.google.com/presentation/d/1pxztvhuOc36D76cDW86oj8nGZAIlQSEn2GZJE0GzGLw/edit?usp=sharing)
 * [Exemplo de código: MLP - Exemplo sobre se um cliente deixa um banco](https://colab.research.google.com/drive/1NndIE2zvup_aWqSG06JR7i6_WxXQ-xMU?usp=sharing)
 * [Exemplo de código: Reconhecimento de caracteres escritos a mão](https://colab.research.google.com/drive/1gGi-n3vAJkjdEKMYLZkSCXoDhyRS1tSJ?usp=sharing)
+* Vídeos extras:
+  * [Treinando um modelo de "Machine Learning" na web para classificação de imagens com a ferramenta "Teachable Machine"](https://youtu.be/Qkop0rB-v1A)
 
 ### _Deep Learning_
 * [Aula Prática: Reconhecimento de caracteres escritos a mão com Deep Learning](https://youtu.be/lXCz0tduSh8) 
